--- a/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/_dropdown.scss
+++ b/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/_dropdown.scss
@@ -57,7 +57,7 @@
     padding: var(--wp--preset--spacing--20);
     cursor: pointer;
     white-space: nowrap;
-    color: var(--color-text);
+    color: var(--color-surface-text);
     transition: background-color 0.15s ease, color 0.15s ease;
 
     &:hover,
