--- a/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/blocks/_wp-block-container.scss
+++ b/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/blocks/_wp-block-container.scss
@@ -2,7 +2,7 @@
 
 .is-style-dark {
     background-color: var(--color-surface);
-    color: var(--color-text);
+    color: var(--color-surface-text);
     border: 1px solid var(--color-border);
     border-radius: var(--wp--custom--border-radius);
     padding: var(--wp--preset--spacing--40);
